--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="utf-8">
-    <link rel="shortcut icon" href="Logo.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="styleRP.css" type="text/css">
+    <link rel="shortcut icon" href="src/images/Logo.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="src/css/styleRP.css" type="text/css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alata">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Anton">
@@ -21,7 +21,7 @@ socorro, amparo, valinhos, vinhedo, monte-mor, louveira, serra-negra, Rafaela Pr
                     <nav class="navbar navbar-expand-lg bg-light fixed-top">
                         <div class="container-fluid">
                           <a class="navbar-brand fonte-titulo cor-especial" href="http://www.rafaelapradolibras.com.br">
-                                  <img src="Logo.png" width="100" height="100" alt="" />
+                                  <img src="src/images/Logo.png" width="100" height="100" alt="" />
                                     Rafaela Prado Libras
                         </a>
                           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -130,9 +130,9 @@ socorro, amparo, valinhos, vinhedo, monte-mor, louveira, serra-negra, Rafaela Pr
                     <h1>Contatos</h1>
                 </header>
                 <strong>
-                    <a href="https://www.instagram.com/rafaelapradolibras/" style="text-decoration: none" target="_blank"><img src="instagram_logo.png"  width="20" height="20"  alt=""/> Instagram</a>
-                    <a href="https://www.facebook.com/rafaela.prado.180" style="text-decoration: none" target="_blank"><img src="facebook_logo.png"  width="20" height="20"  alt=""/> Facebook</a>
-                    <a href="https://wa.me/5519996579421?text=Olá,%20em%20que%20posso%20ajudar?" style="text-decoration: none" target="_blank"><img src="whatsapp_logo.png"  width="20" height="20" alt=""/> Whatsapp</a>
+                    <a href="https://www.instagram.com/rafaelapradolibras/" style="text-decoration: none" target="_blank"><img src="src/images/instagram_logo.png"  width="20" height="20"  alt=""/> Instagram</a>
+                    <a href="https://www.facebook.com/rafaela.prado.180" style="text-decoration: none" target="_blank"><img src="src/images/facebook_logo.png"  width="20" height="20"  alt=""/> Facebook</a>
+                    <a href="https://wa.me/5519996579421?text=Olá,%20em%20que%20posso%20ajudar?" style="text-decoration: none" target="_blank"><img src="src/images/whatsapp_logo.png"  width="20" height="20" alt=""/> Whatsapp</a>
                     </strong>
             </div>
         </article>
